--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
-  "private": true,
-  "name": "cgk-barcodes-api",
-  "version": "1.0.0",
-  "description": "A template for kick starting a Cloudflare Workers project",
-  "main": "index.js",
-  "scripts": {
-    "format": "prettier --write '**/*.{js,ts,tsx,css,json,md}'"
-  },
-  "author": "Justin Noel <justin.noel@calendee.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "prettier": "^1.18.2"
-  }
+	"private": true,
+	"name": "cgk-barcodes-api",
+	"version": "1.0.0",
+	"description": "API for the Community Garden Kitchen.",
+	"main": "./dist/worker.js",
+	"scripts": {
+		"comment": "miniflare will not trigger build on src code changes. Need to run an esbuild watch as well in another terminal",
+		"esbuild:watch": "yarn build --watch",
+		"build": "esbuild ./index.js --bundle --sourcemap --outfile=./dist/worker.js",
+		"dev": "miniflare ./dist/worker.js --watch --debug --env .env.miniflare",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"format": "prettier --write '**/*.{js,css,json,md}'"
+	},
+	"author": "Justin Noel <justin.noel@calendee.com>",
+	"license": "MIT",
+	"devDependencies": {
+		"esbuild": "^0.12.20",
+		"miniflare": "^1.3.3",
+		"prettier": "^1.18.2"
+	},
+	"dependencies": {
+		"@borderless/worker-sentry": "^1.1.1",
+		"itty-router": "^2.4.2",
+		"itty-router-extras": "^0.4.2",
+		"ulidx": "^0.1.0",
+		"zod": "^3.7.2"
+	}
 }
